most important change EUW

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Laser Chad</title>
   </head>
   <body>
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
